--- a/home.html
+++ b/home.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <title> Flex site
-    </title>
+    <title> Flex site </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/styles.css">
@@ -14,13 +13,10 @@
 
     <header>
         <img src="images/logo.png">
-
-
     </header>
     <input type="checkbox" id="toggle" />
     <label for="toggle">&#9776;</label>
     <nav>
-
         <ul>
 
             <li><a href="#">Home</a></li>
@@ -34,11 +30,8 @@
     <div class="mobileHeader">
         <header>
             <img src="images/logo.png">
-
-
         </header>
         <nav>
-
             <ul>
 
                 <li><a href="#">Home</a></li>
@@ -69,7 +62,6 @@
                 <img class="tie" src="images/tie.jpg">
                 <img class="tie" src="images/tie2.jpg">
                 <img class="tie" src="images/tie3.jpg">
-
             </div>
             <img src="images/5.jpg">
         </article>
@@ -83,10 +75,8 @@
             <img class="newArrivals2" src="images/4.jpg">
         </aside>
 
-
-
-
     </div>
+    
     <footer>
         <p>Copyright 2016, Matthews Custom Clothing Inc.</p>
     </footer>
